--- a/package.json
+++ b/package.json
@@ -17,43 +17,49 @@
         "prepare": "husky install"
     },
     "dependencies": {
-        "@vueuse/core": "^8.9.4",
+        "@intlify/unplugin-vue-i18n": "^0.11.0",
+        "@sugarat/theme": "^0.1.29",
+        "@vueuse/core": "^10.1.2",
         "axios": "^0.25.0",
-        "element-plus": "^2.3.3",
+        "bootstrap": "^5.3.0",
+        "bootstrap-vue-next": "^0.9.6",
+        "element-plus": "^2.3.5",
         "jsonp": "^0.2.1",
         "lodash": "^4.17.21",
         "nprogress": "^0.2.0",
-        "pinia": "^2.0.35",
+        "pinia": "^2.1.3",
         "pinia-plugin-persist": "^1.0.0",
         "pinia-plugin-persistedstate": "^2.4.0",
         "prism-theme-vars": "^0.2.4",
         "pug": "^3.0.2",
-        "qs": "^6.11.1",
+        "qs": "^6.11.2",
         "vite-plugin-style-import": "^2.0.0",
-        "vue": "^3.2.47",
+        "vue": "^3.3.4",
         "vue-axios": "^3.5.2",
-        "vue-echarts": "^6.5.4",
+        "vue-echarts": "^6.5.5",
         "vue-i18n": "^9.2.2",
         "vue-lodash": "^2.1.2",
-        "vue-router": "^4.1.6",
+        "vue-router": "^4.2.2",
         "windicss": "^3.5.6"
     },
     "devDependencies": {
         "@commitlint/cli": "^16.3.0",
         "@commitlint/config-conventional": "^16.2.4",
-        "@iconify/json": "^2.2.54",
+        "@iconify-json/logos": "^1.1.33",
+        "@iconify/json": "^2.2.72",
         "@iconify/vue": "^4.1.1",
-        "@intlify/vite-plugin-vue-i18n": "^6.0.3",
         "@types/jsonp": "^0.2.1",
         "@types/node": "^17.0.45",
         "@types/nprogress": "^0.2.0",
         "@types/svgo": "^2.6.4",
-        "@typescript-eslint/eslint-plugin": "^5.59.0",
-        "@typescript-eslint/parser": "^5.59.0",
-        "@vitejs/plugin-vue": "^3.2.0",
-        "@vitejs/plugin-vue-jsx": "2.0.0",
+        "@typescript-eslint/eslint-plugin": "^5.59.8",
+        "@typescript-eslint/parser": "^5.59.8",
+        "@unocss/eslint-config": "^0.53.1",
+        "@unocss/reset": "^0.53.1",
+        "@vitejs/plugin-vue": "^4.2.3",
+        "@vitejs/plugin-vue-jsx": "3.0.1",
         "consola": "^3.1.0",
-        "eslint": "^8.39.0",
+        "eslint": "^8.41.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-airbnb-typescript": "^17.0.0",
         "eslint-config-prettier": "^8.8.0",
@@ -63,35 +69,37 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-tsdoc": "^0.2.17",
-        "eslint-plugin-vue": "^9.11.0",
+        "eslint-plugin-vue": "^9.14.1",
         "husky": "^7.0.4",
         "lint-staged": "^12.5.0",
         "markdown-it-link-attributes": "^4.0.1",
         "markdown-it-prism": "^2.3.0",
-        "postcss": "^8.4.23",
+        "postcss": "^8.4.24",
         "postcss-html": "^1.5.0",
         "postcss-import": "^14.1.0",
         "postcss-load-config": "^4.0.1",
         "postcss-preset-env": "^7.8.3",
         "prettier": "^2.8.8",
-        "sass": "^1.62.0",
-        "stylelint": "^15.6.0",
+        "sass": "^1.62.1",
+        "stylelint": "^15.6.2",
         "stylelint-config-standard-scss": "^8.0.0",
         "stylelint-config-standard-vue": "^1.0.0",
         "stylelint-declaration-block-no-ignored-properties": "^2.7.0",
         "stylelint-order": "^6.0.3",
         "typescript": "^4.9.5",
-        "unplugin-auto-import": "^0.11.5",
+        "unocss": "^0.53.1",
+        "unplugin-auto-import": "^0.16.4",
         "unplugin-fonts": "^1.0.3",
         "unplugin-icons": "^0.16.1",
-        "unplugin-vue-components": "^0.24.1",
-        "vite": "^3.2.6",
+        "unplugin-vue-components": "^0.25.0",
+        "vite": "^4.3.9",
         "vite-plugin-eslint": "^1.8.1",
-        "vite-plugin-vue-markdown": "^0.21.1",
-        "vite-plugin-windicss": "^1.8.10",
-        "vite-svg-loader": "^3.6.0",
-        "vue-eslint-parser": "^9.1.1",
-        "vue-tsc": "^1.4.4"
+        "vite-plugin-vue-markdown": "^0.23.5",
+        "vite-plugin-windicss": "^1.9.0",
+        "vite-svg-loader": "^4.0.0",
+        "vitepress": "1.0.0-beta.1",
+        "vue-eslint-parser": "^9.3.0",
+        "vue-tsc": "^1.6.5"
     },
     "lint-staged": {
         "*.{ts,js,vue}": [
